# RGBMatrixEmulator

./: .gitignore  LICENSE  MANIFEST.in  README.md  description.md  pyproject.toml  setup.py
.github/: require_release_branch.yml
.github/workflows/: black.yml  python-publish.yml  require_release_branch.yml  unittest.yml
RGBMatrixEmulator/: __init__.py  logger.py  version.py
RGBMatrixEmulator/adapters/: __init__.py  base.py  pygame.py  pygame_adapter.py  raw_adapter.py  sixel_adapter.py  terminal.py  terminal_adapter.py  tkinter_adapter.py  turtle.py  turtle_adapter.py
RGBMatrixEmulator/adapters/browser_adapter/: README.md  adapter.py  fps.py  server.py  web_socket.py
RGBMatrixEmulator/cli/: __init__.py  cli.py  command.py  config.py
RGBMatrixEmulator/display_adapters/: __init__.py  base.py  pygame.py  terminal.py
RGBMatrixEmulator/emulation/: canvas.py  matrix.py  options.py
RGBMatrixEmulator/emulators/: canvas.py  matrix.py  options.py
RGBMatrixEmulator/graphics/: __init__.py  color.py  font.py
RGBMatrixEmulator/internal/: adapter_loader.py  emulator_config.py  pixel_style.py  screen.py
RGBMatrixEmulator/pixel_mappers/: __init__.py  identity.py  mirror.py  rotate.py  stack_to_row.py  umapper.py  vmapper.py
RGBMatrixEmulator/renderers/: base.py  global_mask.py  incremental_mask.py
matrix_emulator/: __init__.py  version.py
matrix_emulator/emulators/: matrix.py  options.py
samples/: README.md  __init__.py  canvas-brightness.py  gif-viewer.py  graphics.py  grayscale-block.py  image-brightness.py  image-draw.py  image-scroller.py  image-viewer.py  race-clock.py  runtext.py  samplebase.py  singleton.py  static.py  still-viewer.py
samples/fonts/: 6x10.bdf  6x9.bdf  8x13B.bdf
samples/images/: raspberry.ppm
test/: context.py  generate_reference.py  reference.py  test_config.json  test_pixel_mapper.py  test_sample.py
test/pixel_mapper/: README.md  labeled_panels.py  mapper_reference.py
test/specs/: mapper_reference.py
(+13 files in other folders)
